# KVector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
build_debug/: CMakeCache.txt  KVector  Makefile  cmake_install.cmake
cmake/: CompileOptions.cmake
core/: CMakeLists.txt
core/include/: Iterator.hpp  KVector.hpp  VectorBase.hpp
gtests/: CMakeLists.txt  test.cpp
include/: Iterator.hpp  KVector.hpp  iterator.hpp
test/: CMakeLists.txt  KVectorTest.cpp
tests/: CMakeLists.txt  test.cpp
